syntax = "proto3";

option java_multiple_files = true;
option java_package = "protobuf.br.com.zup";
option java_outer_classname = "Protobuf";
//option objc_class_prefix = "HLW"; // seria para gerar para Objetive C (Iphone / IOS / Apple)

package protobuf.br.com.zup;

import "google/protobuf/timestamp.proto";

service CarroService {

  rpc cadastrar(CarroRequest) returns (CarroResponse) {}
}

enum TipoDeCombustivel {
  DESCONHECIDO = 0;
  GASOLINA = 1;
  ALCOOL = 2;
  FLEX = 3;
}

message Proprietario {
  string nome = 1;
  string cpf = 2;
}

message CarroRequest {
  string modelo = 1;
  string placa = 2;
  int32 ano = 3;
  Proprietario proprietario = 4;
  TipoDeCombustivel tipoDeCombustivel = 5;
}

message CarroResponse {
  string ID = 1;
  google.protobuf.Timestamp criadoEm = 2;
}
